# dray2

./: .classpath  .project  README.md  bitbucket-docs.json  contributors.txt  drae-default-settings.edn  dray  dray-default-settings.edn  make-distribution  project.clj  sample-profiles.clj
doc/: DRAE GUI User Manual.docx  DRAE GUI User Manual.htm  drae.charts.html  index.html
doc/API/: drae.charts.html  drae.config.html  drae.core.html  drae.corpus.html  drae.doc.html  drae.domain.domains.html  drae.domain.numbers.html  drae.domain.recognizers.html  drae.ext.bee.html  drae.ext.ghostscript.html  drae.ext.pdftoxml.html  drae.gazetteer.html  drae.gnui.html  drae.gui.html  drae.j.Doc.html  drae.j.Paxll.html  drae.j.Producer.html  drae.j.README.html  drae.j.Toys.html  drae.j.VisualElement.html  drae.manager.html  drae.paxll.html  drae.producers.html  drae.shape.html  drae.spreadsheet.html  drae.ssa.html  drae.stats.html  drae.tablerep.html  drae.textblock.html  drae.util.char.html  drae.util.exec.html  drae.util.html  drae.util.inspect.html  drae.util.map.html  drae.util.math.html  drae.vtable.html  drae.wset.html  drae.xml.html  drae.zotero.html  dray.charts.html  (+38 more)
doc/DRAE GUI User Manual_files/: filelist.xml
doc/gui/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
resources/scripts/: dray-run-local
resources/spreadsheets/: 01_Sowa2009.xls
resources/test-data/: 1_Ki_2014_overlay.edn
src/associateBlobsAndText/: .gitignore  PointAndRectangle.py  readme.txt  (+3 more)
src/bee/: BEELibTester.cpp  CMakeLists.txt  README.txt
src/bee/BEELib/: .gitignore  BEEBlobData.cpp  BEEBlobData.h  BEEBlobMatcher.cpp  BEEBlobMatcher.h  BEEExtractor.cpp  BEEExtractor.h  BEEImageData.cpp  BEEImageData.h  BEEImageSegmentation.cpp  BEEImageSegmentation.h  CMakeLists.txt
src/bee/Graph_SegmentationLib/: CMakeLists.txt  segment-image.h
src/bee/testdata/: blob_008_11_pv_i-000_Sept03-2014.txt  run-example.sh
(+249 files in other folders)
